[package]
name = "payment"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
futures = "0.3.32"
moka = { version = "0.12.15", features = ["future"] }
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["serde"] }

event-stream = { path = "../event-stream" }
